added - `header` component

--- a/src/css/base.styl
+++ b/src/css/base.styl
@@ -4,11 +4,15 @@
 // utils
 @import './util/config'
 @import './util/rem'
+@import './util/size'
 @import './util/reset'
 @import './util/helpers'
 @import './util/breakpoints'
+@import './util/font-face'
 @import './util/grid'
 @import './util/base'
+@import './util/icon'
 
 // components
 @import '../components/footer/style'
+@import '../components/header/style'
