--- a/src/css/util/config.styl
+++ b/src/css/util/config.styl
@@ -1,5 +1,5 @@
-$font-base = PT Sans
-$max-width = 80em
+$font-base = Trebuchet MS, sans-serif
+$max-width = 70em
 
 $breakpoints = {
   xl: 80em,  // 1280px
@@ -8,7 +8,10 @@ $breakpoints = {
   sm: 35.5em // 568px
 }
 
-$color-brand = #0069b4
-$color-accent = #ffed00
-$color-grey = darken(#fff, 80)
-$color-light-grey = #edeef0
+$color-brand = #052746
+$color-accent = #d4c26d
+$color-accent-darker = #9d9252
+$color-text = #6d6e71
+$color-bg = #e6e7e8
+
+$angle-horz = 3deg
