--- a/templates/views/index.jade
+++ b/templates/views/index.jade
@@ -3,7 +3,9 @@ extends ../layouts/default
 
 //- dependencies
 include ../../src/components/footer/footer
+include ../../src/components/header/header
 
 //- markup
 block content
+  +header
   +footer
