added - [wip] banner

--- a/src/components/header/style.styl
+++ b/src/components/header/style.styl
@@ -13,6 +13,7 @@
 
     .img
       transform skewX(15deg) 'skewY(%s)' % ($angle-horz *-1)
+      backface-visibility hidden
 
   &__nav-holder
     align-items center
