--- a/src/css/base.styl
+++ b/src/css/base.styl
@@ -14,5 +14,6 @@
 @import './util/icon'
 
 // components
+@import '../components/banner/style'
 @import '../components/footer/style'
 @import '../components/header/style'
