--- a/src/css/base.styl
+++ b/src/css/base.styl
@@ -1,4 +1,4 @@
-// vendor
+// vendor [pre]
 @import './vendor/normalize'
 
 // utils
@@ -13,7 +13,11 @@
 @import './util/base'
 @import './util/icon'
 
+// vendor [post]
+@import './vendor/swiper'
+
 // components
 @import '../components/banner/style'
+@import '../components/content/style'
 @import '../components/footer/style'
 @import '../components/header/style'
