--- a/templates/layouts/default.jade
+++ b/templates/layouts/default.jade
@@ -44,7 +44,7 @@ html.root
       (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
       m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
       })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-      ga('create', config.GA_CODE, 'auto');
+      ga('create', #{config.GA_CODE}, 'auto');
       ga('send', 'pageview');
 
     +css('base')
@@ -59,4 +59,5 @@ html.root
 
     +js('//ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery')
     +js('vendor/jquery.nav')
+    +js('vendor/swiper')
     +js('app/main')
