--- a/templates/views/index.jade
+++ b/templates/views/index.jade
@@ -9,5 +9,9 @@ include ../../src/components/header/header
 //- markup
 block content
   +header
-  +banner
+  +banner(banners)
+
+  .c-content
+    p Lorem ipsum dolor sit amet, consectetur adipisicing elit. Expedita molestias saepe illum maxime, corrupti perferendis, ipsum beatae, minus pariatur totam asperiores ex harum, fuga. Ipsam voluptate, non unde veniam deleniti!
+
   +footer
