--- a/src/components/banner/style.styl
+++ b/src/components/banner/style.styl
@@ -1,18 +1,34 @@
 .c-banner
+  background #fff
   border-top 1rem solid $color-accent
   border-bottom 0.35rem solid #fff
   box-shadow 0 1rem 1.5rem rgba(0,0,0,0.35)
-  position relative
   margin-top -3rem
+  overflow hidden
   transform 'skewY(%s)' % $angle-horz
 
   &:before
     background $color-accent-darker
     content ''
     display block
+    position relative
     margin-top -1px
     size 100% 0.6rem
+    z-index 1
+
+  &__item
+    margin -2.5rem 0
+    transform 'skewY(%s)' % ($angle-horz * -1)
 
   .img
     display block
     width 100%
+
+  &__nav
+    $pad= 2rem
+
+    &--next
+      right $pad
+
+    &--prev
+      left $pad
