--- a/src/css/base.styl
+++ b/src/css/base.styl
@@ -19,5 +19,6 @@
 // components
 @import '../components/banner/style'
 @import '../components/content/style'
+@import '../components/content-section/style'
 @import '../components/footer/style'
 @import '../components/header/style'
