--- a/src/css/base.styl
+++ b/src/css/base.styl
@@ -19,6 +19,7 @@
 // components
 @import '../components/banner/style'
 @import '../components/content/style'
+@import '../components/content-heading/style'
 @import '../components/content-section/style'
 @import '../components/footer/style'
 @import '../components/header/style'
