--- a/src/css/util/helpers.styl
+++ b/src/css/util/helpers.styl
@@ -12,3 +12,9 @@
     position relative
     pointer-events none
     top -5.5rem
+
+  &-group
+    &:after
+      content ''
+      display table
+      clear both
