--- a/templates/views/index.jade
+++ b/templates/views/index.jade
@@ -14,5 +14,6 @@ block content
 
   .c-content
     +content-section(institutional['about-us'])
+    +content-section(institutional.company)
 
   +footer
