--- a/src/components/content-section/style.styl
+++ b/src/components/content-section/style.styl
@@ -1,26 +1,21 @@
 .c-content-section
+  background-position bottom -500px
+  background-repeat no-repeat
   overflow-x hidden
 
   &__wrapper
     padding-top 4rem
     position relative
 
-  &__heading
-    background-image linear-gradient(to left, $color-text, rgba($color-text, 0))
-    backface-visibility hidden
-    color #fff
-    font-size rem(14)
-    padding 0.5rem 0.75rem
-    position absolute
-    left -12rem
-    top 0.75rem
-    text-align right
-    text-transform uppercase
-    transform 'skewY(%s)' % $angle-horz
-    width 20rem
+  &__image
+    margin 10rem -2rem 0 2rem
+    float right
 
   &__content
     color $color-text
     font-size rem(14)
     line-height 1.5
     padding 1rem 4rem
+
+  h3
+    margin 1.5rem 0 0.5rem
