--- a/src/css/base.styl
+++ b/src/css/base.styl
@@ -23,3 +23,4 @@
 @import '../components/content-section/style'
 @import '../components/footer/style'
 @import '../components/header/style'
+@import '../components/services/style'
