--- a/src/components/content-heading/style.styl
+++ b/src/components/content-heading/style.styl
@@ -11,3 +11,7 @@
   text-transform uppercase
   transform 'skewY(%s)' % $angle-horz
   width 20rem
+
+  &-wrapper
+    position relative
+    z-index 1
