--- a/src/css/base.styl
+++ b/src/css/base.styl
@@ -18,6 +18,7 @@
 
 // components
 @import '../components/banner/style'
+@import '../components/clients/style'
 @import '../components/content/style'
 @import '../components/content-heading/style'
 @import '../components/content-section/style'
