--- a/templates/views/index.jade
+++ b/templates/views/index.jade
@@ -3,6 +3,7 @@ extends ../layouts/default
 
 //- dependencies
 include ../../src/components/banner/banner
+include ../../src/components/clients/clients
 include ../../src/components/content-section/content-section
 include ../../src/components/footer/footer
 include ../../src/components/header/header
@@ -17,5 +18,6 @@ block content
     +content-section(institutional['about-us'])
     +content-section(institutional.company, { imageClass: 'company' })
     +services
+    +clients
 
   +footer
