--- a/src/components/clients/style.styl
+++ b/src/components/clients/style.styl
@@ -1,7 +1,9 @@
 .c-clients
 
   &__wrapper
-    padding-top 6rem
+    border-bottom 1px solid $color-text
+    margin-bottom 4rem
+    padding 8rem 0 4rem
 
   &__item
     text-align center
