--- a/src/css/base.styl
+++ b/src/css/base.styl
@@ -24,4 +24,5 @@
 @import '../components/content-section/style'
 @import '../components/footer/style'
 @import '../components/header/style'
+@import '../components/questions/style'
 @import '../components/services/style'
