--- a/templates/views/index.jade
+++ b/templates/views/index.jade
@@ -7,6 +7,7 @@ include ../../src/components/clients/clients
 include ../../src/components/content-section/content-section
 include ../../src/components/footer/footer
 include ../../src/components/header/header
+include ../../src/components/questions/questions
 include ../../src/components/services/services
 
 //- markup
@@ -19,5 +20,6 @@ block content
     +content-section(institutional.company, { imageClass: 'company' })
     +services
     +clients
+    +questions
 
   +footer
