added - [wip] contact styles

--- a/templates/views/index.jade
+++ b/templates/views/index.jade
@@ -4,6 +4,7 @@ extends ../layouts/default
 //- dependencies
 include ../../src/components/banner/banner
 include ../../src/components/clients/clients
+include ../../src/components/contact/contact
 include ../../src/components/content-section/content-section
 include ../../src/components/footer/footer
 include ../../src/components/header/header
@@ -21,5 +22,6 @@ block content
     +services
     +clients
     +questions
+    +contact
 
   +footer
