--- a/src/components/questions/style.styl
+++ b/src/components/questions/style.styl
@@ -2,7 +2,8 @@
   color $color-text
 
   &__wrapper
-    padding 6rem 4rem 0
+    border-bottom 1px solid $color-text
+    padding 6rem 4rem 4rem
 
   &__item
     margin-top 1.5rem
