--- a/src/css/base.styl
+++ b/src/css/base.styl
@@ -20,6 +20,7 @@
 @import '../components/banner/style'
 @import '../components/clients/style'
 @import '../components/contact/style'
+@import '../components/contact-form/style'
 @import '../components/content/style'
 @import '../components/content-heading/style'
 @import '../components/content-section/style'
