updated - `contact` styles

--- a/src/components/address/address.jade
+++ b/src/components/address/address.jade
@@ -1,21 +1,21 @@
 mixin address()
   .c-address
-    .c-address__group
-      i.c-address__icon.c-address__icon--map
-      .c-address__content
+    .c-address__group.u-grid.u-grid--no-gutter
+      i.c-address__icon.u-icon location
+      .c-address__content.u-grid__cell
         p Av.: Maringá, 1995 Sl 05 Térreo
         p Jd.: Vitória | Londrina-PR
         p CEP: 86060-000
 
-    .c-address__group
-      i.c-address__icon.c-address__icon--phone
-      .c-address__content
+    .c-address__group.u-grid.u-grid--no-gutter
+      i.c-address__icon.u-icon phone
+      .c-address__content.u-grid__cell
         p
           span 43
           = ' 3324-8571'
 
-    .c-address__group
-      i.c-address__icon.c-address__icon--email
-      .c-address__content
+    .c-address__group.u-grid.u-grid--no-gutter
+      i.c-address__icon.u-icon envelope
+      .c-address__content.u-grid__cell
         - email= 'contato@ggpmarcas.com.br'
         a(href='mailto:#{email}') #{email}
