--- a/src/components/contact/contact.jade
+++ b/src/components/contact/contact.jade
@@ -10,7 +10,7 @@ mixin contact()
     +content-heading('Contato | Pesquise sua marca', true)
 
     .c-contact__wrapper.h-limiter
-      .u-grid
+      .u-grid.u-grid--doubled-gutter
         .u-grid__cell.u-grid__cell--1-2
           +address()
           +social-nav
