--- a/src/css/base.styl
+++ b/src/css/base.styl
@@ -17,6 +17,7 @@
 @import './vendor/swiper'
 
 // components
+@import '../components/address/style'
 @import '../components/banner/style'
 @import '../components/clients/style'
 @import '../components/contact/style'
@@ -26,5 +27,7 @@
 @import '../components/content-section/style'
 @import '../components/footer/style'
 @import '../components/header/style'
+@import '../components/map/style'
 @import '../components/questions/style'
 @import '../components/services/style'
+@import '../components/social-nav/style'
