--- a/src/css/util/icon.styl
+++ b/src/css/util/icon.styl
@@ -1,21 +1,21 @@
 .u-icon
   font-size rem(12)
   font-family 'ggp-icon'
-  font-family: 'ggp-icons'
-  speak: none
-  font-style: normal
-  font-weight: normal
-  font-variant: normal
-  text-transform: none
-  line-height: 1
+  font-family 'ggp-icons'
+  speak none
+  font-style normal
+  font-weight normal
+  font-variant normal
+  text-transform none
+  line-height 1
 
-  letter-spacing: 0
-  -webkit-font-feature-settings: "liga"
-  -moz-font-feature-settings: "liga=1"
-  -moz-font-feature-settings: "liga"
-  -ms-font-feature-settings: "liga" 1
-  -o-font-feature-settings: "liga"
-  font-feature-settings: "liga"
+  letter-spacing 0
+  -webkit-font-feature-settings "liga"
+  -moz-font-feature-settings "liga=1"
+  -moz-font-feature-settings "liga"
+  -ms-font-feature-settings "liga" 1
+  -o-font-feature-settings "liga"
+  font-feature-settings "liga"
 
-  -webkit-font-smoothing: antialiased
-  -moz-osx-font-smoothing: grayscale
+  -webkit-font-smoothing antialiased
+  -moz-osx-font-smoothing grayscale
