--- a/src/components/map/map.jade
+++ b/src/components/map/map.jade
@@ -4,6 +4,6 @@ mixin map()
 
     label.c-map__field
       p.c-map__label Onde você está?
-      input.c-map__input(type='text', placeholder='Digite seu endereço completo')
+      input#location-field.c-map__input(type='text', placeholder='Digite seu endereço completo')
 
-    .c-map__holder
+    .c-map__holder#map-canvas
