--- a/src/components/map/style.styl
+++ b/src/components/map/style.styl
@@ -14,5 +14,18 @@
     padding 0.5rem
     width 100%
 
+  &__route
+    display none
+    margin-bottom 1.25rem
+
+    &.show
+      display block
+
+    ol
+      list-style-type decimal
+
+    li
+      margin-top 0.25rem
+
   &__holder
     height 22.75rem
