--- a/templates/layouts/default.jade
+++ b/templates/layouts/default.jade
@@ -48,7 +48,7 @@ html.root
       ga('send', 'pageview');
 
     +css('base')
-    +js('//maps.googleapis.com/maps/api/js?v=3.exp!')
+    +js('//maps.googleapis.com/maps/api/js?v=3.exp&language=pt-BR!')
 
   body
     .c-main-wrapper
