--- a/src/components/content-section/style.styl
+++ b/src/components/content-section/style.styl
@@ -17,10 +17,35 @@
       float right
       margin 12rem -2rem 0 2rem
 
+  &__expander
+    display none
+
+    ~ .c-content-section__content
+      display none
+
+    &:checked
+      ~ .c-content-section
+        &__trigger
+          display none
+
+        &__content
+          display block
+
+  &__trigger
+    color $color-brand
+    cursor pointer
+    display inline-block
+    position relative
+    top -0.25rem
+    text-decoration underline
+
   &__content
     font-size rem(14)
     line-height 1.5
     padding 1rem 4rem
+
+    &--extra
+      padding 0 4rem 4rem
 
   h3
     margin 1.5rem 0 0.5rem
