--- a/src/css/base.styl
+++ b/src/css/base.styl
@@ -14,6 +14,7 @@
 @import './util/icon'
 
 // vendor [post]
+@import './vendor/magnific-popup'
 @import './vendor/swiper'
 
 // components
@@ -25,6 +26,7 @@
 @import '../components/content/style'
 @import '../components/content-heading/style'
 @import '../components/content-section/style'
+@import '../components/documents/style'
 @import '../components/footer/style'
 @import '../components/header/style'
 @import '../components/map/style'
