--- a/templates/views/index.jade
+++ b/templates/views/index.jade
@@ -6,6 +6,7 @@ include ../../src/components/banner/banner
 include ../../src/components/clients/clients
 include ../../src/components/contact/contact
 include ../../src/components/content-section/content-section
+include ../../src/components/documents/documents
 include ../../src/components/footer/footer
 include ../../src/components/header/header
 include ../../src/components/questions/questions
@@ -25,3 +26,4 @@ block content
     +contact
 
   +footer
+  +documents
