--- a/src/components/header/header.jade
+++ b/src/components/header/header.jade
@@ -8,9 +8,9 @@ mixin header
         img.img(src='/img/logo.png', alt='GGP Marcas & Patentes')
 
       section.c-header__nav-holder
-        nav.c-header__main-nav
+        nav.c-header__main-nav#main-nav
           each item, index in mainNav
             li.c-header__main-nav__item.h-im(class=!index ? 'active' : '')
-              a.c-header__main-nav__link(href=item.url, title=item.label, class=!index ? 'active' : '') #{item.label}
+              a.c-header__main-nav__link(href=item.url, title=item.label, class=!index ? 'active' : '', data-modal=item.modal) #{item.label}
 
         +social-nav('c-social-nav--header')
