--- a/templates/layouts/default.jade
+++ b/templates/layouts/default.jade
@@ -59,5 +59,6 @@ html.root
 
     +js('//ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery')
     +js('vendor/jquery.nav')
+    +js('vendor/magnific-popup.ns')
     +js('vendor/swiper')
     +js('app/main')
