--- a/src/components/content-section/content-section.jade
+++ b/src/components/content-section/content-section.jade
@@ -22,5 +22,6 @@ mixin content-section(data, settings)
 
       if extra
         input.c-content-section__expander(type='checkbox', id=data.key)
-        label.c-content-section__trigger(for=data.key) Saiba mais...
+        .c-content-section__trigger
+          label(for=data.key) Saiba mais...
         .c-content-section__content.c-content-section__content--extra !{extra}
