--- a/src/components/contact-form/contact-form.jade
+++ b/src/components/contact-form/contact-form.jade
@@ -5,7 +5,7 @@ mixin contact-form()
     .c-contact-form__wrapper
       .c-contact-form__row
         p.c-contact-form__label * Nome do solicitante:
-        input.c-contact-form__field(type='text', name='name', required)
+        input.c-contact-form__field(type='text', name='name.full', required)
 
       .c-contact-form__row
         p.c-contact-form__label * E-mail:
@@ -26,11 +26,11 @@ mixin contact-form()
       .c-contact-form__row
         p.c-contact-form__label Envie seu logotipo (se ouver):
         .c-contact-form__file
-          input.c-contact-form__field(type='file', name='brand', required)
+          input.c-contact-form__field(type='file', name='logo')
 
       .c-contact-form__row
         p.c-contact-form__label * Descreva quais produtos/serviços?
-        textarea.c-contact-form__field.c-contact-form__field--textarea(name='messge', required)
+        textarea.c-contact-form__field.c-contact-form__field--textarea(name='message', required)
 
       .c-contact-form__row.h-group
         p.c-contact-form__info * Preenchimento obrigatório
