--- a/src/components/clients/style.styl
+++ b/src/components/clients/style.styl
@@ -2,8 +2,11 @@
 
   &__wrapper
     border-bottom 1px solid $color-text
-    margin-bottom 4rem
+    margin-bottom 2rem
     padding 8rem 0 4rem
+
+    +breakpoint(md)
+      margin-bottom 4rem
 
   &__item
     text-align center
