--- a/src/components/footer/style.styl
+++ b/src/components/footer/style.styl
@@ -1,4 +1,7 @@
 .c-footer
   color darken(#fff, 50)
-  padding 4rem 1rem
+  padding 2rem
   text-align center
+
+  +breakpoint(md)
+    padding 4rem 1rem
