--- a/src/components/address/address.jade
+++ b/src/components/address/address.jade
@@ -1,20 +1,20 @@
 mixin address()
   .c-address
-    .c-address__group.u-grid.u-grid--no-gutter
+    .c-address__group.u-grid.u-grid--no-gutter.u-grid--not-responsive
       i.c-address__icon.u-icon location
       .c-address__content.u-grid__cell
         p Av.: Maringá, 1995 Sl 05 Térreo
         p Jd.: Vitória | Londrina-PR
         p CEP: 86060-000
 
-    .c-address__group.u-grid.u-grid--no-gutter
+    .c-address__group.u-grid.u-grid--no-gutter.u-grid--not-responsive
       i.c-address__icon.u-icon phone
       .c-address__content.u-grid__cell
         p
           span 43
           = ' 3324-8571'
 
-    .c-address__group.u-grid.u-grid--no-gutter
+    .c-address__group.u-grid.u-grid--no-gutter.u-grid--not-responsive
       i.c-address__icon.u-icon envelope
       .c-address__content.u-grid__cell
         - email= 'contato@ggpmarcas.com.br'
