--- a/src/components/content-section/style.styl
+++ b/src/components/content-section/style.styl
@@ -5,14 +5,25 @@
   overflow-x hidden
 
   &__wrapper
-    padding-top 4rem
+    padding 4rem 0
     position relative
 
+    +breakpoint(md)
+      padding-bottom 0
+
   &__heading
-    padding 0 4rem
+    padding 0 1rem
     text-transform uppercase
 
+    +breakpoint(md)
+      padding 0 4rem
+
   &__image
+    display none
+
+    +breakpoint(md)
+      display block
+
     &.company
       float right
       margin 12rem -2rem 0 2rem
@@ -33,10 +44,13 @@
 
   &__trigger
     color $color-brand
-    padding 0 4rem
+    padding 0 1rem
     position relative
     top -0.25rem
     text-decoration underline
+
+    +breakpoint(md)
+      padding 0 4rem
 
     label
       cursor pointer
@@ -44,7 +58,10 @@
   &__content
     font-size rem(14)
     line-height 1.5
-    padding 1rem 4rem
+    padding 1rem
+
+    +breakpoint(md)
+      padding 1rem 4rem
 
     &--extra
       padding 0 4rem 6rem
