--- a/src/components/content/style.styl
+++ b/src/components/content/style.styl
@@ -1,4 +1,7 @@
 .c-content
   margin-top -5rem
-  padding 8rem 0 3rem
+  padding 8rem 0 1rem
   background #fff
+
+  +breakpoint(md)
+    padding-bottom 3rem
