--- a/src/components/questions/style.styl
+++ b/src/components/questions/style.styl
@@ -3,7 +3,10 @@
 
   &__wrapper
     border-bottom 1px solid $color-text
-    padding 6rem 4rem 4rem
+    padding 6rem 1rem 2rem
+
+    +breakpoint(md)
+      padding 6rem 4rem 4rem
 
   &__item
     margin-top 1.5rem
