--- a/templates/views/index.jade
+++ b/templates/views/index.jade
@@ -18,7 +18,7 @@ block content
   +banner(banners)
 
   .c-content
-    +content-section(institutional['about-us'])
+    +content-section(institutional['about-us'], { id: 'empresa' })
     +content-section(institutional.company, { imageClass: 'company' })
     +services
     +clients
