--- a/src/components/contact/contact.jade
+++ b/src/components/contact/contact.jade
@@ -6,7 +6,7 @@ include ../map/map
 include ../social-nav/social-nav
 
 mixin contact()
-  .c-contact
+  .c-contact#contato
     +content-heading('Contato | Pesquise sua marca', true)
 
     .c-contact__wrapper.h-limiter
