--- a/src/components/header/style.styl
+++ b/src/components/header/style.styl
@@ -21,8 +21,12 @@
     flex 1
 
   &__main-nav
+    display none
     flex 1
     text-align center
+
+    +breakpoint(md)
+      display block
 
     &__item
       color $color-accent
@@ -32,14 +36,18 @@
         content: '|'
         margin-left 0.3rem
 
-      &.active:after
-        display none
-
     &__link
       font-size rem(14)
       text-transform uppercase
 
-      &.active
+      &.is.active
         background $color-accent
         color $color-brand
         padding 0.25rem 0.5rem
+
+  &__select-nav
+    display block
+    margin-left auto
+
+    +breakpoint(md)
+      display none
