--- a/src/components/contact-form/style.styl
+++ b/src/components/contact-form/style.styl
@@ -71,3 +71,9 @@
       &:before
         content '|'
         margin-right 0.5rem
+
+  &__feedback
+    color #fff
+    display none
+    margin-top 1rem
+    text-align center
