--- a/src/components/contact-form/contact-form.jade
+++ b/src/components/contact-form/contact-form.jade
@@ -1,5 +1,5 @@
 mixin contact-form()
-  form.c-contact-form#form(method='post', action='/contact')
+  form.c-contact-form#form(method='post', enctype='multipart/form-data', action='contact')
     h3.c-contact-form__heading Pesquise sua marca!
 
     .c-contact-form__wrapper
@@ -26,7 +26,7 @@ mixin contact-form()
       .c-contact-form__row
         p.c-contact-form__label Envie seu logotipo (se ouver):
         .c-contact-form__file
-          input.c-contact-form__field(type='file', name='logo')
+          input.c-contact-form__field(type='file', name='logo_upload')
 
       .c-contact-form__row
         p.c-contact-form__label * Descreva quais produtos/serviços?
