--- a/src/components/address/style.styl
+++ b/src/components/address/style.styl
@@ -12,7 +12,7 @@
 
   &__icon
     color $color-text
-    font-size rem(16)
+    font-size rem(20)
     padding 0.25rem 0.75rem 0 0
 
   &__content
@@ -22,3 +22,7 @@
 
     a
       text-transform none
+
+  &__text
+    display inline-block
+    margin-top 0.25rem
