--- a/src/components/banner/banner.jade
+++ b/src/components/banner/banner.jade
@@ -1,5 +1,5 @@
 mixin banner(data)
-  section.c-banner.swiper-container
+  section.c-banner.swiper-container#intro
     ul.c-banner__items.swiper-wrapper
       each item in data
         - image = item.image
