--- a/src/components/banner/style.styl
+++ b/src/components/banner/style.styl
@@ -1,20 +1,10 @@
 .c-banner
   background #fff
-  border-top 1rem solid $color-accent
   border-bottom 0.35rem solid #fff
   box-shadow 0 1rem 1.5rem rgba(0,0,0,0.35)
-  margin-top -3rem
   overflow hidden
+  padding-top 10rem
   transform 'skewY(%s)' % $angle-horz
-
-  &:before
-    background $color-accent-darker
-    content ''
-    display block
-    position relative
-    margin-top -1px
-    size 100% 0.6rem
-    z-index 2
 
   &__item
     margin -2.5rem 0
