--- a/src/components/questions/questions.jade
+++ b/src/components/questions/questions.jade
@@ -2,7 +2,8 @@
 include ../content-heading/content-heading
 
 mixin questions()
-  .c-questions#duvidas
+  .c-questions
+    .h-anchor#duvidas
     +content-heading('Dúvidas', true)
 
     ul.c-questions__wrapper.h-limiter
