--- a/src/components/services/services.jade
+++ b/src/components/services/services.jade
@@ -3,7 +3,8 @@ include ../content-heading/content-heading
 include ../content-section/content-section
 
 mixin services()
-  .c-services#servicos
+  .c-services
+    .h-anchor#servicos
     +content-heading('Serviços', true)
 
     ul.c-services__items
