added - new item to `main-nav`

--- a/src/components/clients/clients.jade
+++ b/src/components/clients/clients.jade
@@ -3,6 +3,7 @@ include ../content-heading/content-heading
 
 mixin clients()
   .c-clients
+    .h-anchor#clientes
     +content-heading('Clientes', true)
 
     .c-clients__wrapper.h-limiter
