--- a/templates/emails/enquiry-notification.jade
+++ b/templates/emails/enquiry-notification.jade
@@ -1,6 +1,6 @@
 extends /layouts/default
 
-block content
+block body-contents
   h1 Olá *|first_name|*,
   p.text-larger Um contato foi enviado para #{brand}:
 
