--- a/templates/emails/enquiry-notification.jade
+++ b/templates/emails/enquiry-notification.jade
@@ -26,7 +26,7 @@ block body-contents
 
   if enquiry.logo
     p.text-larger Logo: 
-    | img(src=enquiry.logo.url)
+    img(src=enquiry.logo.url)
 
   if enquiry.message
     p.text-larger Messagem:
